--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li class="title__network__item"><a href="https://github.com/leoneltowers">Github <img src="assets/github (4).png"> </a></li>
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/fredy-leonel-torres-205436252/">Linkedin <img src="assets/linkedin.png"></a></li>
                     <li class="title__network__item"><a href="https://www.instagram.com/leoneltorres17/">Instagram <img src="assets/instagram.png"></a></li>
-                    <li class="title__network__item"><a href="">Currículo <img src="assets/downloading.png"></a></li>
+                    <li class="title__network__item"><a href="assets/FREDY_LEONEL_TOWERS-2023.pdf">Currículo <img src="assets/downloading.png"></a></li>
                 </ul>
             </div>
         </div>
@@ -221,8 +221,8 @@
                         <h3 class="experience__text">Proyecto de Programacion II - IUTN </h3>
                         <div class="experience__description">
                             <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/leoneltowers/INSPT-ProgrII-2602-fi-2022-reclamos-municipio-TORRES-Fredy-Leonel"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/leoneltowers/INSPT-ProgrII-2602-fi-2022-reclamos-municipio-TORRES-Fredy-Leonel"><button class="experience__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://github.com/leoneltowers/INSPT-ProgrII-2602-fi-2022-reclamos-municipio-TORRES-Fredy-Leonel"><button class="experience__botao--demo">Ver demo</button></a></span>
                         </div>
                     </div>
                 </div>    
@@ -235,8 +235,8 @@
                         <h3 class="experience__text">Challenge</h3>
                         <div class="experience__description">
                             <!-- Pon el enlace del proyecto en Github o GithubPages -->
-                            <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
-                            <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
+                            <span class="experience__repo"><a href="https://github.com/leoneltowers/portfolio_developer"><button class="experience__botao--repo">Repositório</button></a></span>
+                            <span class="experience__demo"><a href="https://github.com/leoneltowers/portfolio_developer"><button class="experience__botao--demo">Ver demo</button></a></span>
                         </div>
                     </div>
                 </div>  
@@ -252,7 +252,7 @@
         <section class="formcontato" id="contacto">
             <div  class="formcontato__contacto">
                 <div class="formcontato--esquerda">
-                    <img class="formcontato__img" src="assets\contact_image.png">
+                    <img class="formcontato__img" src="assets/conta.jpg">
                 </div>
                 <div class="formcontato__text">
                     <h2 class="formcontato__title">Contacto</h2>
@@ -272,8 +272,8 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Fulana de Tal</p>
-                <p>2022</p>
+                <p>Desarrollado por Fredy Leonel Torres</p>
+                <p>2023</p>
             </div>
         </section>
     </div>
